# airline-revenue-analytics

./: .gitignore  README.md  README.zh.md  pyproject.toml  requirements-notebook.txt  requirements.txt
data/raw/: README.md
notebooks/: portfolio_report.ipynb
notebooks/booking/: 00_setup_and_data_intake.ipynb  01_data_understanding.ipynb  02_data_preparation.ipynb  03_transformation_and_split.ipynb  04_modeling_loopA.ipynb  05_modeling_loopB.ipynb  06_interpretation_compare.ipynb  README.md
notebooks/segment/: README.md  segment_02_data_understanding.ipynb  segment_03_preparation_features.ipynb  segment_04_modeling.ipynb  segment_06_evaluation.ipynb
outputs/booking/tables/: metrics.csv  metrics_robust.csv
pipelines/: run_booking.py  run_segment.py
scripts/: clean_repo.sh  fetch_data.py
src/airline_revenue_analytics/: __init__.py  config.py  io.py
src/airline_revenue_analytics/features/: __init__.py  booking.py  segment.py
src/airline_revenue_analytics/modeling/: __init__.py  eval.py  train.py
src/airline_revenue_analytics/viz/: __init__.py  charts.py
tests/: test_features.py  test_io.py
